[package]
name = "rust-launcher"
version = "0.1.0"
authors = ["Craig Cavanaugh <jgnash.devel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.11"

[target.'cfg(windows)'.dependencies]
winreg = "0.6.2"

[dependencies]
java-locator = "0.1.2"
lazy_static = "1.4.0"
msgbox = "0.4.0"

[profile.release]
opt-level = 'z'
debug = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'

[[bin]]
name = "jGnash"
path = "src/main.rs"